--- a/templates/register.html
+++ b/templates/register.html
@@ -17,7 +17,7 @@
         <br>
         <label for="role">Role</label>
         <select name="role" id="role">
-            <option value="owner">Owner</option>
+            <option value="Owner">Owner</option>
             <option value="Member">Member</option>
           </select>
         <!-- <label for="role">Role:</label>
