--- a/templates/checkin.html
+++ b/templates/checkin.html
@@ -5,11 +5,11 @@
 </head>
 <body>
     <h1>Check-in</h1>
-    <form method="POST" action="{{ url_for('checkin') }}">
-        <label>Workout:</label>
-        <input type="text" name="workout">
-        <input type="submit" value="Check-in">
-    </form>
+    <form method="post">
+        {{ form.hidden_tag() }}
+        {{ form.date.label }} {{ form.date }}
+        {{ form.submit }}
+      </form>
     
 </body>
 </html>
