--- a/templates/checkin.html
+++ b/templates/checkin.html
@@ -1,15 +1,45 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Check-in</title>
-</head>
-<body>
-    <h1>Check-in</h1>
-    <form method="post">
-        {{ form.hidden_tag() }}
-        {{ form.date.label }} {{ form.date }}
-        {{ form.submit }}
-      </form>
-    
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Check-in{% endblock %}
+
+{% block nav %}
+<div class='container'>
+{% if uin %}
+  <li class="nav-item">
+    <a class="nav-link" href="{{ url_for('logout')}}" tabindex="-1" >Logout</a>
+  </li>
+  {% else %}
+  <li class="nav-item">
+    <a class="nav-link" href="{{ url_for('login')}}" tabindex="-1" >Login</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{{ url_for('register')}}" tabindex="-1" >Register</a>
+  </li>
+  {% endif %}
+</div>
+{% endblock %}
+{% block content %}
+<h2>Check In</h2>
+<div class='container'>
+  <form method='POST' action='/checkin'>
+    {{ form.hidden_tag() }}
+    <fieldset class="form-group">
+      <div class="form-group">
+        {{ form.email.label(class="form-control-label") }}
+        {% if form.email.errors %}
+        {{ form.email(class="form-control-lg is-invalid")}}
+        <div class='invalid-feedback'>
+          {% for error in form.email.errors %}
+          <span>{{ error }}</span>
+          {% endfor %}
+        </div>
+        {% else %}
+        {{ form.email(class="form-control form-control-lg") }}
+        {% endif %}
+      </div>
+    </fieldset>
+    <div class="form-group text-center">
+      {{ form.submit(class="btn btn-outline-info") }}
+    </div>
+  </form>
+  </div>
+{% endblock %}
