--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,18 @@
 <div class='container'>
 {% if uin %}
 <li class="nav-item">
+    <a class="nav-link" href="{{ url_for('index')}}" tabindex="-1" >Home</a>
+  </li>
+  <li class="nav-item">
     <a class="nav-link" href="{{ url_for('dashboard')}}" tabindex="-1" >Dashboard</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="{{ url_for('logout')}}" tabindex="-1" >Logout</a>
   </li>
   {% else %}
+  <li class="nav-item">
+    <a class="nav-link" href="{{ url_for('dashboard')}}" tabindex="-1" >Dashboard</a>
+  </li>
   <li class="nav-item">
     <a class="nav-link" href="{{ url_for('login')}}" tabindex="-1" >Login</a>
   </li>
