--- a/templates/package.html
+++ b/templates/package.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>Package</title>
@@ -21,4 +21,4 @@
         </div>
     </form>
 </body>
-</html>
+</html> -->
