--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,6 +4,9 @@
 {% block nav %}
 <div class='container'>
 {% if uin %}
+<li class="nav-item">
+  <a class="nav-link" href="" tabindex="-1" >Check-ins</a>
+</li>
   <li class="nav-item">
     <a class="nav-link" href="{{ url_for('logout')}}" tabindex="-1" >Logout</a>
   </li>
@@ -18,6 +21,7 @@
 </div>
 {% endblock %}
 {% block content %}
-<h2>Welcome {{ member.name }}!</h2>
+<h4>Welcome {{ member.name }}!</h4>
 <a class="nav-link" href="{{ url_for('checkin')}}" tabindex="-1" >Check In</a>
+<a class="nav-link" href="{{ url_for('view_checkins')}}" tabindex="-1" >Check-ins</a>
 {% endblock %}
